[package]
name = 'WebGestaltR'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ['staticlib']
name = 'WebGestaltR'

[dependencies]
webgestalt_lib = { git = "https://github.com/bzhanglab/webgestalt_rust.git", branch = "master"}
extendr-api = { version = '0.7.1' }
ahash = "0.8.11"
ndarray = "0.16.1"
